# bouffalo_sdk

./: .gitignore  .gitmodules
examples/btble/central/: README.md
examples/btble/peripheral/: README.md
examples/gw1n_config/: CMakeLists.txt  flash_prog_cfg.ini  gw1n_image.h  main.c
examples/keyboard/: CMakeLists.txt  README.md  hid_keyboard_template.c  main.c  proj.conf
examples/power_monitor/: CMakeLists.txt  README.md  bat_sim.h  bitstream_to_c.sh  cmd.c  cmd.h  gw1n.c  gw1n_image.h  ina229.h  main.c  spi_fifo_test.c  tca9534.c  tca9534.h
examples/power_monitor/pc_apps/pygubu/: power_monitor.py
examples/spififo_freertos/: CMakeLists.txt  FreeRTOSConfig.h  bitstream_to_c.sh  flash_prog_cfg.ini  gw1n.c  gw1n_image.h  main.c  proj.conf  spi_fifo.c  spi_fifo.h
examples/spififo_freertos/documents/lmcxo2/: MachXO2_32-PinQFNPackageMigrationFile.CSV
examples/spififo_freertos_lwip_v2/: BUILD.sh  CMakeLists.txt  FLASH.sh  FreeRTOSConfig.h  README.md  SETENV.sh  ethernetif.c  ethernetif.h  flash_prog_cfg.ini  gw1n_image.h  lwipopts_user.h  main.c  mqtt_broker.c  mqtt_pub.c  mqtt_sub.c  ping.c  ping.h  proj.conf  spi_fifo.c  spi_fifo.h  tcp_socket.c  tcp_socket.h
examples/spififo_test/: CMakeLists.txt  Makefile  README.md  bitstream_to_c.sh  cdc_acm_template.c  flash_prog_cfg.ini  gw1n.c  gw1n.h  gw1n_image.h  lmcxo2.c  main.c  spi_fifo_test.c  spi_fifo_test.h
examples/spififo_test/libxsvf/: xsvftool-bl616.c
examples/spififo_test_v2/: README.md  bitstream_to_c.sh  debug.h  gw1n.h  gw1n_image.h  lmcxo2.h  main.c  spi_fifo_test.c  spi_fifo_test.h
examples/spififo_test_v2/documents/lmcxo2/: MachXO248-PinQFNPackageMigrationFile.CSV
examples/spififo_test_v2/libxsvf/: xsvftool-bl616.c
